--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -257,7 +257,7 @@
         <div class="flex-column content">
             <h5><u><b>Owner</b></u></h5>
             <div id="UTubOwner"></div>
-            <h5><u><b>Members</b></u></h5>
+            <h5 id="MembersHeader"><u><b>Members</b></u></h5>
             <div class="flex-column flex-start" id="listMembers">
                 <!-- Members -->
             </div>
