UI Refactor for large screen, icon placement, URL card sizing

--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -215,6 +215,10 @@ span.tagBadge:hover .tag-remove {
     color: #8c9b9d;
 }
 
+.url-string {
+    margin-bottom: 0px;
+}
+
 .selected {
     border: 5px solid rgb(13, 255, 0);
 }
