--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -155,13 +155,13 @@
         <div class="flex-column content">
             <div id="listURLs">
                 <!-- Current selected UTub's URLs will be displayed here -->
-                <div id="UPRRow" class="flex-row wrap justify-content-center">
+                <div id="UPRRow" class="flex-row wrap">
                     <!-- URLs above selected URL will be displayed here -->
                 </div>
                 <div id="URLFocusRow" class="flex-row wrap">
                     <!-- Selected URL will be highlighted here -->
                 </div>
-                <div id="LWRRow" class="flex-row wrap justify-content-center">
+                <div id="LWRRow" class="flex-row wrap">
                     <!-- URLs below selected URL will be displayed here -->
                 </div>
             </div>
@@ -225,7 +225,7 @@
 
     <div id="MembersDeck" class="deck h-75 p-3 flex-column">
 
-        <div class="titleElement">
+        <div class="titleElement sidePanelTitle">
             <div class="col-6 col-lg-6">
                 <h2 id="MemberDeckHeader">Members</h2>
             </div>
