--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -113,7 +113,7 @@
     <!-- Main Panel View -->
 
     <main id="mainPanel" class="mx-0 bt-4 pt-0">
-        <div id="pageContent" class="row">
+        <div id="pageContent" class="">
             {% block utubhome %}
             {% endblock %}
         </div>
