--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -140,7 +140,7 @@
 <!-- Center Panel -->
 
 <div id="centerPanel" class="panel col-sm-9">
-    <div id="URLDeck" class="deck h-100 flex-column">
+    <div id="URLDeck" class="deck h-100 flex-column" style="align-items: stretch;">
         <!-- Header -->
         <div class="titleElement">
 
@@ -163,7 +163,7 @@
                 </div>
 
                 <!-- Edit UTub button -->
-                <i id="editUTubNameBtn" class="mx-1" style="display: none; color: #545454">
+                <i id="editUTubNameBtn" class="mx-1" style="display: none;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                         class="bi bi-pencil-square editIcon" viewBox="0 0 16 16">
                         <path
@@ -255,8 +255,8 @@
         </div>
 
         <!-- Access all URLs button -->
-        <div class="titleElement flex-column" style="padding-top: 10px">
-            <button id="accessAllURLsBtn" class="btn btn-primary" style="display: none;">Access All URLs
+        <div class="flex-column align-center" style="padding-top: 10px; width: 100%;">
+            <button id="accessAllURLsBtn" class="btn btn-primary" style="display: none; width: 50%;">Access All URLs
                 in UTub</button>
         </div>
     </div>
